testsuite/positive/Issue-git-0479-macro.n
// REFERENCE: Nemerle.Compiler

public macro M()
{
  def q = array[<[ 1 ]>, <[ 2 ]>];
  <[ ( ..$q ) ]>
}