testsuite/negative/macroarg-lib.n
// REFERENCE: Nemerle.Compiler.dll

namespace MacroArg {
  macro f (e) {
    _ = e;
    <[ () ]>
  }
}
